// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote Widget buy/sell buttons are hidden if there's no trading permissions 1`] = `
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        2
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <!-- /ko -->
  </main>
</body>
------------HTML PREVIEW---------------
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        2
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <!-- /ko -->
  </main>
</body>
`;

exports[`Quote Widget renders altered last price 1`] = `
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        100
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <button
      class="-buy-button"
    >
      Buy
    </button>
    <button
      class="-sell-button"
    >
      Sell
    </button>
  </main>
</body>
------------HTML PREVIEW---------------
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        100
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <button
      class="-buy-button"
    >
      Buy
    </button>
    <button
      class="-sell-button"
    >
      Sell
    </button>
  </main>
</body>
`;

exports[`Quote Widget renders successfully 1`] = `
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        2
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <button
      class="-buy-button"
    >
      Buy
    </button>
    <button
      class="-sell-button"
    >
      Sell
    </button>
  </main>
</body>
------------HTML PREVIEW---------------
<body>
  <header>
    <input
      class="-security-input"
    />
    <div>
      <template
        name="Tmpl_DatePicker"
        data="{
          "currentDate": "2017-07-11T14:00:00.000Z"
      }"
      />
    </div>
  </header>
  <main>
    <section>
      Blurst Price: 
      <span>
        1
      </span>
    </section>
    <section>
      Last Price: 
      <span>
        2
      </span>
    </section>
    <section>
      Ask Price: 
      <span>
        3
      </span>
    </section>
    <button
      class="-buy-button"
    >
      Buy
    </button>
    <button
      class="-sell-button"
    >
      Sell
    </button>
  </main>
</body>
`;
